--- a/eTools Ultimate/Views/Pages/Giftbox/GiftboxPage.xaml
+++ b/eTools Ultimate/Views/Pages/Giftbox/GiftboxPage.xaml
@@ -67,61 +67,9 @@
             <Setter Property="Margin" Value="5,0,0,0"/>
         </Style>
         
-        <!-- Giftbox Type Information Tooltip -->
-        <ToolTip x:Key="GiftboxTypeInfoTooltip" Placement="Mouse">
-            <StackPanel Width="480" Margin="5">
-                <ui:TextBlock
-                    FontTypography="BodyStrong"
-                    Text="Box Type Information"
-                    TextWrapping="Wrap"
-                    Margin="0,0,0,8" />
-                                    
-                <TextBlock TextWrapping="Wrap" Margin="0,2">
-                    <Run Foreground="{DynamicResource TextFillColorPrimaryBrush}" Text="GiftBox"/>
-                    <Run Text=" Standard box type with basic parameters"/>
-                </TextBlock>
-                                    
-                <TextBlock Margin="0,10,0,2" TextWrapping="Wrap">
-                    <Run Foreground="#00AAFF" Text="GiftBox2"/>
-                    <Run Text=" Premium collection box type"/>
-                </TextBlock>
-                <TextBlock Margin="0,0,0,10" Foreground="{DynamicResource TextFillColorSecondaryBrush}" Text="Parameter 1-2: Advanced configuration" TextWrapping="Wrap" />
-                                    
-                <TextBlock Margin="0,0,0,2" TextWrapping="Wrap">
-                    <Run Foreground="#00FF80" Text="GiftBox3"/>
-                    <Run Text=" Used for User Care Events &amp; Boosters"/>
-                </TextBlock>
-                <TextBlock Margin="0,0,0,10" Foreground="{DynamicResource TextFillColorSecondaryBrush}" Text="Parameter 1: If &quot;2&quot; = 2-day expiration" TextWrapping="Wrap" />
-                                    
-                <TextBlock Margin="0,0,0,2" TextWrapping="Wrap">
-                    <Run Foreground="#AA55FF" Text="GiftBox4"/>
-                    <Run Text=" Themed for Angel Wing items"/>
-                </TextBlock>
-                <TextBlock Margin="0,0,0,10" Foreground="{DynamicResource TextFillColorSecondaryBrush}" Text="Parameter 1: e.g. &quot;10080&quot; = time in seconds" TextWrapping="Wrap" />
-                                    
-                <TextBlock Margin="0,0,0,2" TextWrapping="Wrap">
-                    <Run Foreground="#FFDD00" Text="GiftBox5"/>
-                    <Run Text=" Extended rewards"/>
-                </TextBlock>
-                <TextBlock Margin="0,0,0,10" Foreground="{DynamicResource TextFillColorSecondaryBrush}" Text="Parameter 1 &amp; 2: Additional configuration" TextWrapping="Wrap" />
-                                    
-                <TextBlock Margin="0,0,0,2" TextWrapping="Wrap">
-                    <Run Foreground="#FF5555" Text="GiftBox6"/>
-                    <Run Text=" Complex reward structures"/>
-                </TextBlock>
-                <TextBlock Margin="0,0,0,10" Foreground="{DynamicResource TextFillColorSecondaryBrush}" Text="Parameter 1-4: Advanced configuration" TextWrapping="Wrap" />
-                                    
-                <TextBlock Foreground="{DynamicResource TextFillColorSecondaryBrush}" TextWrapping="Wrap" Margin="0,5,0,0">
-                    <Run Text="Note: Parameters vary depending on the box type."/>
-                    <LineBreak/>
-                    <Run Text="Expiration times may be specified in either days or seconds."/>
-                </TextBlock>
-            </StackPanel>
-        </ToolTip>
-
         <!-- DataTemplate for Giftbox ListView Items -->
         <DataTemplate x:Key="GiftboxListTemplate">
-            <Grid Margin="4" ToolTip="{StaticResource GiftboxTypeInfoTooltip}">
+            <Grid Margin="4">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
@@ -235,7 +183,6 @@
                     FontSize="24"
                     Margin="0,0,0,10" >
                     <Run Text="Items in"/>
-                    <Run Text="Giftbox"/>
                     <Run Text="{Binding SelectedItem.Item.Name, ElementName=GiftboxListView}"/>
                 </ui:TextBlock>
 
@@ -251,29 +198,20 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
                 <ui:SymbolIcon 
                     Grid.Column="0"
-                    Symbol="GiftCard24"
+                    Symbol="Box24"
                     FontSize="16"
                     Foreground="{DynamicResource TextFillColorPrimaryBrush}"/>
                 <ui:TextBlock 
                     Grid.Column="1"
                     Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                    FontTypography="Caption" >
+                    FontTypography="Caption" Margin="5,0,0,0" >
                     <Run Text="Items in box :"/>
                     <Run Text="{Binding SelectedItem.Items.Count, Mode=OneWay, ElementName=GiftboxListView}"/>
                 </ui:TextBlock>
-
-                <ui:SymbolIcon
-                    Grid.Column="2"
-                    Symbol="Info24"
-                    FontSize="16"
-                    Margin="5,0,0,0"
-                    Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                    ToolTip="{StaticResource GiftboxTypeInfoTooltip}"/>
             </Grid>
 
             <!-- Probability information -->
