--- a/eTools Ultimate/Views/Pages/Home/DashboardPage.xaml
+++ b/eTools Ultimate/Views/Pages/Home/DashboardPage.xaml
@@ -83,9 +83,8 @@
         <!-- Banner styled like the SettingsPage -->
         <Border x:Name="BannerBorder" Grid.Row="1" 
                 Height="200"
-                Margin="24,0,24,0"
-                Cursor="Hand"
-                MouseLeftButtonDown="OpenChangelogDialog"
+                Margin="0,0,0,0"
+                Cursor="Arrow"
                 CornerRadius="8">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
@@ -149,8 +148,8 @@
                      Margin="0,24,0,0" 
                      VerticalScrollBarVisibility="Auto" 
                      HorizontalScrollBarVisibility="Disabled">
-            <Grid Width="{Binding ActualWidth, ElementName=BannerBorder}" 
-                 HorizontalAlignment="Center" 
+            <Grid Width="Auto" 
+                 HorizontalAlignment="Stretch" 
                  VerticalAlignment="Top">
                 <ItemsControl 
                     Margin="0,0,0,0" 
