--- a/eTools Ultimate/Views/Pages/Home/DashboardPage.xaml
+++ b/eTools Ultimate/Views/Pages/Home/DashboardPage.xaml
@@ -9,18 +9,19 @@
     Title="DashboardPage"
     d:DataContext="{d:DesignInstance local:DashboardPage,
                                      IsDesignTimeCreatable=False}"
-    d:DesignHeight="750"
+    d:DesignHeight="754"
     d:DesignWidth="800"
+    ScrollViewer.CanContentScroll="False"
     mc:Ignorable="d">
-    
+
 
     <Page.Resources>
         <SolidColorBrush x:Key="ApplicationBackgroundBrush" Color="#FFFFFF"/>
         <SolidColorBrush x:Key="TextFillColorPrimaryBrush" Color="#212121"/>
         <SolidColorBrush x:Key="TextFillColorSecondaryBrush" Color="#9E9E9E"/>
-        
-        
-        
+
+
+
         <!-- Template for navigation cards -->
         <DataTemplate x:Key="NavigationCardTemplate">
             <ui:Card 
@@ -36,16 +37,23 @@
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    
+
                     <!-- Left icon - larger size -->
-                    <ui:SymbolIcon 
+                    <Image 
                         Grid.Column="0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
-                        FontSize="32"
+                        Width="48"
+                        Height="48"
                         Margin="4,0,14,0"
-                        Symbol="{Binding Icon}" />
-                    
+                        Source="{Binding Icon}"
+                        RenderOptions.BitmapScalingMode="HighQuality" 
+                        RenderOptions.EdgeMode="Aliased">
+                        <Image.CacheMode>
+                            <BitmapCache RenderAtScale="2" />
+                        </Image.CacheMode>
+                    </Image>
+
                     <!-- Text in the middle -->
                     <StackPanel Grid.Column="1" VerticalAlignment="Center">
                         <TextBlock 
@@ -58,7 +66,7 @@
                             Text="{Binding Description}"
                             TextWrapping="Wrap" />
                     </StackPanel>
-                    
+
                     <!-- Right arrow -->
                     <ui:SymbolIcon 
                         Grid.Column="2"
@@ -73,86 +81,95 @@
         </DataTemplate>
     </Page.Resources>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-        <!-- Banner styled like the SettingsPage -->
-        <Border x:Name="BannerBorder" Grid.Row="1" 
-                Height="200"
-                Margin="0,0,0,0"
-                Cursor="Arrow"
-                CornerRadius="8">
-            <Border.Background>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                    <GradientStop Offset="0" Color="#2B5797" />
-                    <GradientStop Offset="1" Color="#0078D7" />
-                </LinearGradientBrush>
-            </Border.Background>
-            <Border CornerRadius="8">
+            <!-- Banner styled like the SettingsPage -->
+            <Border x:Name="BannerBorder" Grid.Row="1" 
+                    Height="300"
+                    Margin="0,0,0,0"
+                    Cursor="Arrow"
+                    CornerRadius="8">
                 <Border.Background>
-                    <ImageBrush 
-                        ImageSource="/Views/Pages/Home/HomePage.png" 
-                        RenderOptions.BitmapScalingMode="HighQuality"
-                        Stretch="UniformToFill" />
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                        <GradientStop Offset="0" Color="#2B5797" />
+                        <GradientStop Offset="1" Color="#0078D7" />
+                    </LinearGradientBrush>
                 </Border.Background>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-                    
-                    <StackPanel
-                        Grid.Row="0"
-                        Margin="48,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Center"
-                        Background="Transparent">
-                        <ui:TextBlock
-                            FontTypography="Title"
-                            Foreground="#FFFFFF"
-                            Text="Welcome" 
-                            FontWeight="Bold" />
-                    </StackPanel>
-                    
-                    <Grid Grid.Row="1">
-                        <ui:TextBlock
-                            Margin="12"
-                            HorizontalAlignment="Right"
-                            VerticalAlignment="Bottom"
-                            FontTypography="Caption"
-                            Foreground="#BFFFFFFF"
-                            Text="Created by eTools Ultimate" />
-                        
-                        <ui:Button
-                            Margin="12"
-                            HorizontalAlignment="Left"
-                            VerticalAlignment="Bottom"
-                            Appearance="Primary"
-                            Background="#4DFFFFFF"
-                            BorderBrush="#33FFFFFF"
-                            Foreground="#FFFFFF"
-                            Content="Patchlogs"
-                            Icon="History24"
-                            Click="OpenChangelogDialog" />
-                    </Grid>
-                </Grid>
-            </Border>
-        </Border>
+                <Border CornerRadius="8">
+                    <Border.Background>
+                        <ImageBrush 
+                            ImageSource="/Views/Pages/Home/HomePage.png" 
+                            RenderOptions.BitmapScalingMode="HighQuality"
+                            Stretch="UniformToFill" />
+                    </Border.Background>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
 
-        <!-- Navigation Cards with ScrollViewer -->
-        <ScrollViewer Grid.Row="2" 
-                     Margin="0,24,0,0" 
-                     VerticalScrollBarVisibility="Auto" 
-                     HorizontalScrollBarVisibility="Disabled">
-            <Grid Width="Auto" 
+                        <!-- Black banner with blur effect behind Welcome text -->
+                        <Border Grid.Row="0"
+                                VerticalAlignment="Center"
+                                Background="#4C000000"
+                                Height="100">
+                            <Border.Effect>
+                                <BlurEffect Radius="30" KernelType="Gaussian" RenderingBias="Quality" />
+                            </Border.Effect>
+                        </Border>
+
+                        <StackPanel
+                            Grid.Row="0"
+                            Margin="48,0"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            Background="Transparent">
+                            <ui:TextBlock
+                                FontTypography="Title"
+                                Foreground="#FFFFFF"
+                                Text="Welcome" 
+                                FontWeight="Bold"
+                                FontSize="32" />
+                        </StackPanel>
+
+                        <Grid Grid.Row="1">
+                            <ui:TextBlock
+                                Margin="12"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Bottom"
+                                FontTypography="Caption"
+                                Foreground="#BFFFFFFF"
+                                Text="Created by eTools Ultimate" />
+
+                            <ui:Button
+                                Margin="12"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Bottom"
+                                Appearance="Primary"
+                                Background="#4DFFFFFF"
+                                BorderBrush="#33FFFFFF"
+                                Foreground="#FFFFFF"
+                                Content="Patchlogs"
+                                Icon="History24"
+                                Click="OpenChangelogDialog" />
+                        </Grid>
+                    </Grid>
+                </Border>
+            </Border>
+
+            <!-- Navigation Cards without inner ScrollViewer -->
+            <Grid Grid.Row="2" 
+                 Margin="0,24,0,0" 
                  HorizontalAlignment="Stretch" 
                  VerticalAlignment="Top">
                 <ItemsControl 
-                    Margin="0,0,0,0" 
+                    Margin="0,0,0,50" 
                     ItemTemplate="{StaticResource NavigationCardTemplate}"
                     ItemsSource="{Binding NavigationCards}">
                     <ItemsControl.ItemsPanel>
@@ -162,11 +179,45 @@
                     </ItemsControl.ItemsPanel>
                 </ItemsControl>
             </Grid>
-        </ScrollViewer>
-        
-        <!-- Changelog-Dialog (ausgeblendet) -->
-        <Frame x:Name="ChangelogFrame" 
-               Visibility="Collapsed"
-               Grid.RowSpan="3" />
-    </Grid>
+
+            <!-- GitHub Button -->
+            <Image Grid.Row="2"
+                   Source="/eTools Ultimate;component/Views/Pages/Home/github.png" 
+                   Width="36" 
+                   Height="36" 
+                   Stretch="Uniform"
+                   Margin="0,0,60,20"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Bottom"
+                   Cursor="Hand"
+                   ToolTip="View on GitHub"
+                   MouseLeftButtonDown="OpenGithubLink">
+                <Image.Effect>
+                    <DropShadowEffect ShadowDepth="1" Opacity="0.3" BlurRadius="4" Color="#000000"/>
+                </Image.Effect>
+            </Image>
+
+            <!-- Discord Button -->
+            <Image Grid.Row="2"
+                   Source="/eTools Ultimate;component/Views/Pages/Home/discord.png" 
+                   Width="36" 
+                   Height="36" 
+                   Stretch="Uniform"
+                   Margin="0,0,20,20"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Bottom"
+                   Cursor="Hand"
+                   ToolTip="Join our Discord server"
+                   MouseLeftButtonDown="OpenDiscordLink">
+                <Image.Effect>
+                    <DropShadowEffect ShadowDepth="1" Opacity="0.3" BlurRadius="4" Color="#000000"/>
+                </Image.Effect>
+            </Image>
+
+            <!-- Changelog-Dialog (ausgeblendet) -->
+            <Frame x:Name="ChangelogFrame" 
+                   Visibility="Collapsed"
+                   Grid.RowSpan="3" />
+        </Grid>
+    </ScrollViewer>
 </Page>
