--- a/eTools Ultimate/Views/Pages/Settings/AboutPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/AboutPage.xaml
@@ -12,6 +12,7 @@
                                      IsDesignTimeCreatable=False}"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    ScrollViewer.CanContentScroll="False"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -25,8 +26,8 @@
                 <StackPanel HorizontalAlignment="Center" Margin="0,20,0,40">
                     <Image 
                         Source="/Views/Pages/Settings/Logo.png" 
-                        Width="400" 
-                        Height="120" 
+                        Width="500" 
+                        Height="200" 
                         />
                     <TextBlock 
                         Text="{Binding AppVersion}" 
